<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_Profile"
                android:icon="@mipmap/resume"
                android:title="@string/profile"/>
        <item
                android:id="@+id/nav_Timetable"
                android:icon="@mipmap/timetable"
                android:title="@string/timetable"/>
        <item
                android:id="@+id/nav_Subjects"
                android:icon="@mipmap/books"
                android:title="@string/subjects"/>
        <item
                android:id="@+id/nav_Grades"
                android:icon="@mipmap/test"
                android:title="@string/grades"/>
        <item
                android:id="@+id/nav_Messages"
                android:icon="@mipmap/envelope"
                android:title="@string/messages"/>
    </group>

   <group android:checkableBehavior="single">
       <item
               android:id="@+id/nav_Settings"
               android:icon="@mipmap/settings"
               android:title="@string/action_settings">

       </item>
   </group>

</menu>
