<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/primaryBackgroundYellow">

<androidx.cardview.widget.CardView
                                   android:layout_width="match_parent"
                                   android:layout_height="wrap_content"
                                   app:cardCornerRadius="10dp"
                                   android:layout_margin="5dp"
                                   android:background="@color/cardview_light_background">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">


        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="0dp"
                                                           android:layout_height="wrap_content"
                                                           android:layout_margin="5dp"
                                                           android:layout_weight="1"
                                                           android:layout_gravity="center">

            <ImageView android:layout_width="20dp"
                       android:layout_height="20dp"
                       app:layout_constraintTop_toTopOf="parent"
                       app:layout_constraintStart_toStartOf="parent"
                       android:id="@+id/frag_Subject_icon"
                       android:layout_marginTop="5dp"
                       android:layout_marginStart="10dp"
                       app:srcCompat="@mipmap/subject"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/frag_Subject_Name"
                      android:layout_marginStart="10dp"
                      app:layout_constraintTop_toTopOf="@id/frag_Subject_icon"
                      app:layout_constraintBottom_toBottomOf="@+id/frag_Subject_icon"
                      app:layout_constraintStart_toEndOf="@+id/frag_Subject_icon"
                      android:textSize="17sp"
                      android:textStyle="bold"/>

            <ImageView android:layout_width="20dp" android:layout_height="20dp"
                       app:layout_constraintTop_toBottomOf="@id/frag_Subject_icon"
                       app:layout_constraintStart_toStartOf="parent"
                       android:id="@+id/frag_Teacher_icon"
                       android:layout_marginTop="30dp"
                       android:layout_marginStart="10dp"
                       app:srcCompat="@mipmap/professor"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/frag_Subject_teacher"
                      android:layout_marginStart="10dp"
                      app:layout_constraintTop_toTopOf="@id/frag_Teacher_icon"
                      app:layout_constraintBottom_toBottomOf="@+id/frag_Teacher_icon"
                      app:layout_constraintStart_toEndOf="@id/frag_Teacher_icon"
                      android:textSize="15sp"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/frag_Subject_id"
                      android:layout_marginTop="30dp"
                      app:layout_constraintTop_toBottomOf="@id/frag_Subject_teacher"
                      app:layout_constraintStart_toStartOf="@id/frag_Subject_teacher"
                      android:textSize="15sp"
                      android:textStyle="italic"/>

            <ImageView android:layout_width="20dp" android:layout_height="20dp"
                       app:layout_constraintTop_toBottomOf="@id/frag_Subject_id"
                       app:layout_constraintStart_toStartOf="parent"
                       android:id="@+id/frag_Desc_icon"
                       android:layout_marginTop="30dp"
                       android:layout_marginStart="10dp"
                       app:srcCompat="@drawable/desc"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/frag_Subject_Desc"
                      android:layout_marginStart="10dp"
                      app:layout_constraintTop_toTopOf="@id/frag_Desc_icon"
                      app:layout_constraintBottom_toBottomOf="@+id/frag_Desc_icon"
                      app:layout_constraintStart_toEndOf="@id/frag_Teacher_icon"
                      android:textSize="15sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:orientation="vertical">

            <androidx.cardview.widget.CardView android:layout_width="match_parent"
                                               android:layout_height="wrap_content"
                                               android:layout_margin="5dp"
                                               app:cardCornerRadius="10dp"
                                               android:background="@color/primaryBackgroundYellow"
                                               android:id="@+id/frag_Sub_cardview"
                                               android:visibility="gone">

                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:orientation="vertical">

                    <TextView
                            android:id="@+id/frag_Lessons"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lessons"
                            android:textStyle="bold"
                            android:layout_gravity="center"

                    />

                    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                                  android:orientation="horizontal" android:weightSum="3">

                        <LinearLayout android:layout_width="0dp" android:layout_height="match_parent"
                                      android:layout_weight="1" android:orientation="vertical">

                            <TextView android:id="@+id/frag_day1"
                                      android:layout_width="wrap_content"
                                      android:layout_height="wrap_content"
                                      android:layout_marginStart="5dp"
                                      android:text="@string/mon_"
                                      android:visibility="gone"/>

                            <TextView android:id="@+id/frag_day2"
                                      android:layout_width="wrap_content"
                                      android:layout_height="wrap_content"
                                      android:layout_marginStart="5dp"
                                      android:text="@string/tue_"
                                      android:visibility="gone"/>

                            <TextView android:id="@+id/frag_day3"
                                      android:layout_width="wrap_content"
                                      android:layout_height="wrap_content"
                                      android:layout_marginStart="5dp"
                                      android:text="@string/wed_"
                                      android:visibility="gone"/>

                            <TextView android:id="@+id/frag_day4"
                                      android:layout_width="wrap_content"
                                      android:layout_height="wrap_content"
                                      android:layout_marginStart="5dp"
                                      android:text="@string/thur_"
                                      android:visibility="gone"/>

                            <TextView android:id="@+id/frag_day5"
                                      android:layout_width="wrap_content"
                                      android:layout_height="wrap_content"
                                      android:layout_marginStart="5dp"
                                      android:text="@string/fri_"
                                      android:visibility="gone"/>
                        </LinearLayout>

                        <LinearLayout android:layout_width="0dp" android:layout_height="match_parent"
                                      android:layout_weight="2" android:orientation="vertical"
                                      android:gravity="end">

                            <TextView android:id="@+id/frag_date1"
                                      android:layout_width="wrap_content"
                                      android:layout_height="wrap_content"
                                      android:layout_marginEnd="5dp"
                                      android:visibility="gone"/>

                            <TextView android:id="@+id/frag_date2"
                                      android:layout_width="wrap_content"
                                      android:layout_height="wrap_content"
                                      android:layout_marginEnd="5dp"
                                      android:visibility="gone"/>

                            <TextView android:id="@+id/frag_date3"
                                      android:layout_width="wrap_content"
                                      android:layout_height="wrap_content"
                                      android:layout_marginEnd="5dp"
                                      android:visibility="gone"/>

                            <TextView android:id="@+id/frag_date4"
                                      android:layout_width="wrap_content"
                                      android:layout_height="wrap_content"
                                      android:layout_marginEnd="5dp"
                                      android:visibility="gone"/>

                            <TextView android:id="@+id/frag_date5"
                                      android:layout_width="wrap_content"
                                      android:layout_height="wrap_content"
                                      android:layout_marginEnd="5dp"
                                      android:visibility="gone"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button android:id="@+id/frag_take_subject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/take"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@color/primaryLightColor"
                    android:visibility="gone"/>
        </LinearLayout>

    </LinearLayout>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/frag_back"
            android:background="@drawable/rounded_dark_green_bg"
            android:text="@string/back"
            android:textColor="@android:color/white"
            android:layout_margin="5dp"
            android:layout_gravity="bottom|end"/>


</androidx.cardview.widget.CardView>
</LinearLayout>