<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity"
        android:background="@drawable/logbook">

    <TextView android:id="@+id/TextEmail"
            android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintStart_toStartOf="@id/Login_Email"
              app:layout_constraintBottom_toTopOf="@id/Login_Email"
              android:layout_marginBottom="10dp"
              android:text="@string/e_mail"
              android:textColor="@android:color/white"
              android:fontFamily="@font/almendra_display"
              android:textStyle="bold"
              android:textSize="@dimen/mainSize"/>

    <EditText
            android:id="@+id/Login_Email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:background="@drawable/rounded_edittext"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/almendra_display"
            android:textStyle="bold"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintStart_toStartOf="@id/Login_Passw"
              app:layout_constraintBottom_toTopOf="@id/Login_Passw"
              android:layout_marginBottom="10dp"
              android:text="@string/password"
              android:textColor="@android:color/white"
              android:fontFamily="@font/almendra_display"
              android:textStyle="bold"
              android:textSize="@dimen/mainSize"/>

    <EditText
            android:id="@+id/Login_Passw"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Login_Email"
            android:layout_marginTop="70dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:fontFamily="@font/almendra_display"
            android:textStyle="bold"
            android:background="@drawable/rounded_edittext"
            android:inputType="textPassword"/>

    <ImageView
            android:id="@+id/Butt_Login"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="@id/Login_Passw"
            app:layout_constraintTop_toBottomOf="@id/Login_Passw"
            android:layout_marginTop="10dp"
            app:srcCompat="@android:drawable/ic_media_play"
            android:onClick="onClickLogin"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/create_an_account"
              android:layout_marginStart="15dp"
              app:layout_constraintStart_toStartOf="@id/Login_Passw"
              app:layout_constraintTop_toTopOf="@id/Butt_Login"
              app:layout_constraintBottom_toBottomOf="@id/Butt_Login"
              android:textColor="@android:color/white"
              android:fontFamily="@font/almendra_display"
              android:textStyle="bold"
              android:onClick="onClickSignUp"
              android:textSize="@dimen/mediumSize"/>


    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:clickable="false"
                 android:id="@+id/Login_Container">
    </FrameLayout>

    <include layout="@layout/progress_bar_screen"
             android:id="@+id/progress_bar_screen"
             android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>